[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solarjv-analyzer"
version = "0.0.1"
description = "J–V Analysis GUI using PyMeasure and PyQt5"
authors = [{ name = "Yamandeep", email = "example@example.com" }]
keywords = ["solar", "JV", "pymeasure", "gui", "photovoltaics"]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "pymeasure",
  "PyQt5",
  "pyvisa",
  "matplotlib",
  "reportlab",
  "pandas"
]

[tool.hatch.envs.default]
dependencies = [
  "pymeasure",
  "PyQt5",
  "pyvisa",
  "matplotlib",
  "reportlab",
  "pandas"
]

[tool.hatch.envs.default.scripts]
start = "python src/solarjv_analyzer/main.py"
