[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solarjv-analyzer"
version = "0.0.1"
description = "J–V Analysis GUI using PyMeasure and PyQt5"
authors = [
  { name = "Yamandeep", email = "st195620@stud.uni-stuttgart.de" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows"
]
keywords = ["solar", "JV", "pymeasure", "gui", "photovoltaics"]
dependencies = [
  "pymeasure",
  "PyQt5",
  "pyvisa",
  "matplotlib",
  "reportlab",
  "pandas",
  "scipy",
]

[tool.hatch.envs.default]
dependencies = [
  "pymeasure",
  "PyQt5",
  "pyvisa",
  "matplotlib",
  "reportlab",
  "pandas",
  "pyserial",
]

[tool.hatch.envs.default.scripts]
start = "python src/solarjv_analyzer/main.py"

[tool.briefcase]
project_name = "SolarJVAnalyzer"
formal_name = "Solar JV Analyzer"
bundle = "com.yourorg.solarjvanalyzer"
version = "0.0.1"

[tool.briefcase.app.solarjv_analyzer]
sources = ["src/solarjv_analyzer"]
entry_point = "solarjv_analyzer.main:main"
python_version = "3.9"
requires = [
  "pymeasure",
  "PyQt5",
  "pyvisa",
  "matplotlib",
  "reportlab",
  "pandas",
  "scipy",
  "pyserial",
  "std-nslog" 
]
license.file = "LICENSE.txt"
